# EasyPyTorch

./: README.md  pyproject.toml  scratch.py
nn/: AlexNet.py  CGAN.py  CycleGAN.py  DCGAN.py  DSC.py  DeepLabV3+.py  FCN16.py  GAN.py  GoogLeNet.py  MobileNet.py  PSPNet.py  ResNet.py  SegNet.py  Transformer.py  UNet.py  VAE.py  VGG.py  YOLOV3.py
papers/: DCGAN.py  PSPNet.py  ResNet.py  UNet.py  cyclegan.py  pix2pix.py  utils.py
src/: data.py  inference.py  training.py
tests/: test_inference.py  test_training.py
